# Financial-Data-Analysis-Toolkit-Workspace

./: FILE_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  pyproject.toml
docs/: function_reference.md
examples/: 01_quick_check.py
src/fda_toolkit/: __init__.py  registry.py
src/fda_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fda_toolkit/core/: columns.py  duplicates.py  missing.py  outliers.py  registry.py  text.py  types.py
src/fda_toolkit/features/: categorical.py  datetime.py  registry.py
src/fda_toolkit/finance/: entities.py  parsing.py  registry.py  rules.py
src/fda_toolkit/io/: readers.py  registry.py  writers.py
src/fda_toolkit/pipelines/: quick_clean.py  registry.py
src/fda_toolkit/reporting/: delta.py  exceptions.py  profiling.py  registry.py
src/fda_toolkit/utils/: __init__.py  logging.py  registry.py  security.py  types.py
src/fda_toolkit/validation/: business_rules.py  integrity.py  ranges.py  registry.py  schema.py
tests/: test_smoke_imports.py
