[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fda-toolkit"
version = "0.2.7"
description = "Financial Data Analysis toolkit — 67 production-ready Python functions for cleaning, validating & analyzing financial data with audit trails."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Teslim Adeyanju", email = "info@adeyanjuteslim.co.uk"}
]
keywords = [
  "finance",
  "data-analysis",
  "data-cleaning",
  "validation",
  "pandas",
  "toolkit",
  "financial-data",
  "data-engineering"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24"
]

[project.urls]
Homepage = "https://github.com/TeslimAdeyanju/Financial-Data-Analysis-Toolkit-Workspace"
Repository = "https://github.com/TeslimAdeyanju/Financial-Data-Analysis-Toolkit-Workspace"
Documentation = "https://pypi.org/project/fda-toolkit/"
Issues = "https://github.com/TeslimAdeyanju/Financial-Data-Analysis-Toolkit-Workspace/issues"
Changelog = "https://github.com/TeslimAdeyanju/Financial-Data-Analysis-Toolkit-Workspace/releases"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylance]
typeCheckingMode = "basic"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "ASYNC", "S", "B"]
ignore = ["E501", "ANN101", "ANN102"]
